force-app/main/default/objects/MB_Prospect__c/MB_Prospect__c.object-meta.xml
<CustomObject>
    <label>MB Prospect</label>
    <nameField>
        <displayFormat>MB-{0000000}</displayFormat>
        <label>MB Prospect Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MB Prospects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>