force-app/main/default/objects/MB_Prospect__c/fields/AddressLine1__c.field-meta.xml
<CustomField>
    <fullName>AddressLine1__c</fullName>
    <label>AddressLine1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>