force-app/main/default/objects/MB_Prospect__c/fields/AddressLine4__c.field-meta.xml
<CustomField>
    <fullName>AddressLine4__c</fullName>
    <label>AddressLine4</label>
    <length>255</length>
    <type>Text</type>
</CustomField>