force-app/main/default/objects/MB_Prospect__c/fields/Spare_Date_Field_2__c.field-meta.xml
<CustomField>
    <fullName>Spare_Date_Field_2__c</fullName>
    <label>Spare Date Field 2</label>
    <type>Date</type>
</CustomField>