force-app/main/default/objects/MB_Prospect__c/fields/Spare_Number_Field_2__c.field-meta.xml
<CustomField>
    <fullName>Spare_Number_Field_2__c</fullName>
    <label>Spare Number Field 2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>