force-app/main/default/objects/MB_Prospect__c/fields/Spare_Text_Field_2__c.field-meta.xml
<CustomField>
    <fullName>Spare_Text_Field_2__c</fullName>
    <label>Spare Text Field 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>