force-app/main/default/objects/MB_Prospect__c/fields/Spare_Text_Field_3__c.field-meta.xml
<CustomField>
    <fullName>Spare_Text_Field_3__c</fullName>
    <label>Spare Text Field 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>