force-app/main/default/objects/MB_Prospect__c/fields/Testdrive_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Testdrive_DateTime__c</fullName>
    <label>Testdrive DateTime</label>
    <type>DateTime</type>
</CustomField>