force-app/main/default/objects/MB_Prospect__c/fields/Trade_In__c.field-meta.xml
<CustomField>
    <fullName>Trade_In__c</fullName>
    <label>Trade-In</label>
    <length>255</length>
    <type>Text</type>
</CustomField>