force-app/main/default/objects/MB_Prospect__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Customer_Full_Name__c</columns>
    <columns>Email_Address__c</columns>
    <columns>Mobile_Number__c</columns>
    <columns>Preferred_SC__c</columns>
    <columns>Promotion_name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>